2012-04-24  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/52999
	* varasm.c (get_section): Don't ICE for section conflicts with
	built-in section kinds.

2012-04-23  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/sync.md (fetchop_name): Change ior attribute to "or".

2012-04-23  Georg-Johann Lay  <avr@gjlay.de>

	* doc/extend.texi (AVR Named Address Spaces): Fix typos.

2012-04-23  Richard Guenther  <rguenther@suse.de>

	PR c/53060
	* c-typeck.c (build_binary_op): Fix typo.

2012-04-23  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimizations/52891
	* tree-vect-patterns.c (adjust_bool_pattern): Use
	build_nonstandard_type even if rhs1 has unsigned INTEGER_TYPE,
	but with non-standard precision.

2012-04-22  Ian Lance Taylor  <iant@google.com>

	* godump.c (go_output_typedef): Dump size of structs.

2012-04-20  Ulrich Weigand  <ulrich.weigand@linaro.org>

	Backport from mainline:

	* config/arm/arm.c (arm_print_operand): Fix invalid alignment
	hints for 'A' operand types.

2012-04-19  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2012-04-19 mainline r186588.

	PR target/53033
	* config/avr/avr.c (avr_out_load_psi): Fix assembler template for
	the case *(X+const).

2012-04-18  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/sync.md (fetchop_name): Change ior attribute to "or".

2012-04-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/53020
	* config/i386/sync.md (atomic_<code><mode>): Rename to
	atomic_<logic><mode>.

2012-04-16  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-04-12  Uros Bizjak  <ubizjak@gmail.com>

	PR target/52932
	* config/i386/avx2intrin.h (_mm256_permutevar8x32_ps): Change second
	argument type to __m256i.  Update call to __builtin_ia32_permvarsf256.
	* config/i386/sse.md (avx2_permvarv8sf): Change operand 1 to V8SI.
	(avx2_permvarv8sf, avx2_permvarv8si): Switch operands 1 and 2.
	* config/i386/i386.c (bdesc_args) <__builtin_ia32_permvarsf256>:
	Update builtin type to V8SF_FTYPE_V8SF_V8SI.